// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOM snapshots > flint-alert — default 1`] = `
"<!---->
            <div part="base" role="alert" class="alert  info ">
                <div class="icon" part="icon">
                    <slot name="icon"><!--?lit$[hash]$--><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg></slot>
                </div>
                <div class="content">
                    <!--?lit$[hash]$-->
                    <div class="message" part="message">
                        <slot></slot>
                    </div>
                </div>
                <!--?lit$[hash]$-->
            </div>
        <style></style>"
`;

exports[`DOM snapshots > flint-alert — severity error 1`] = `
"<!---->
            <div part="base" role="alert" class="alert  error ">
                <div class="icon" part="icon">
                    <slot name="icon"><!--?lit$[hash]$--><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line></svg></slot>
                </div>
                <div class="content">
                    <!--?lit$[hash]$-->
                    <div class="message" part="message">
                        <slot></slot>
                    </div>
                </div>
                <!--?lit$[hash]$-->
            </div>
        <style></style>"
`;

exports[`DOM snapshots > flint-avatar — with text 1`] = `
"<!---->
      <div part="base" role="img" class=" avatar " aria-label="John">
        <!--?lit$[hash]$--><slot><svg width="60%" height="60%" viewBox="0 0 24 24" fill="currentColor"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path></svg></slot>
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-badge — default 1`] = `
"<!---->
      <slot></slot>
      <span part="base" role="status" class="badge  primary " aria-hidden="false">
        <!--?lit$[hash]$-->5
      </span>
    <style></style>"
`;

exports[`DOM snapshots > flint-button — default 1`] = `
"<!---->
      <button type="button" part="base" class=" primary medium "><!--?lit$[hash]$-->
      <span class="prefix-slot" part="prefix"><slot name="prefix"></slot></span>
      <span class="label-inner" part="label"><slot></slot></span>
      <span class="suffix-slot" part="suffix"><slot name="suffix"></slot></span>
      <span class="spinner" part="spinner" aria-hidden="true">
        <span class="spinner-icon"></span>
      </span>
    </button>
      <!--?lit$[hash]$-->
    <style></style>"
`;

exports[`DOM snapshots > flint-button — disabled 1`] = `
"<!---->
      <button type="button" part="base" class=" primary medium is-disabled " disabled=""><!--?lit$[hash]$-->
      <span class="prefix-slot" part="prefix"><slot name="prefix"></slot></span>
      <span class="label-inner" part="label"><slot></slot></span>
      <span class="suffix-slot" part="suffix"><slot name="suffix"></slot></span>
      <span class="spinner" part="spinner" aria-hidden="true">
        <span class="spinner-icon"></span>
      </span>
    </button>
      <!--?lit$[hash]$-->
    <style></style>"
`;

exports[`DOM snapshots > flint-button — variant outlined 1`] = `
"<!---->
      <button type="button" part="base" class=" outlined medium "><!--?lit$[hash]$-->
      <span class="prefix-slot" part="prefix"><slot name="prefix"></slot></span>
      <span class="label-inner" part="label"><slot></slot></span>
      <span class="suffix-slot" part="suffix"><slot name="suffix"></slot></span>
      <span class="spinner" part="spinner" aria-hidden="true">
        <span class="spinner-icon"></span>
      </span>
    </button>
      <!--?lit$[hash]$-->
    <style></style>"
`;

exports[`DOM snapshots > flint-checkbox — default 1`] = `
"<!---->
      <label part="base" class=" wrapper ">
        <input type="checkbox" value="on">
        <div part="control" class=" checkbox ">
          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
            <!--?lit$[hash]$--><polyline points="20 6 9 17 4 12"></polyline>
          </svg>
        </div>
        <!--?lit$[hash]$--><slot class="label" part="label"></slot>
      </label>
    <style></style>"
`;

exports[`DOM snapshots > flint-chip — default 1`] = `
"<!---->
      <div part="base" class=" chip " tabindex="-1" aria-disabled="false">
        <slot name="avatar"></slot>
        <slot name="icon"></slot>
        <span class="label"><!--?lit$[hash]$-->Tag</span>
        <!--?lit$[hash]$-->
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-chip — deletable 1`] = `
"<!---->
      <div part="base" class=" chip " tabindex="-1" aria-disabled="false">
        <slot name="avatar"></slot>
        <slot name="icon"></slot>
        <span class="label"><!--?lit$[hash]$-->Tag</span>
        <!--?lit$[hash]$-->
          <span class="delete-icon" role="button" tabindex="0" aria-label="Remove Tag">
            <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
              <path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path>
            </svg>
          </span>
        
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-divider — default 1`] = `
"<!---->
      <div role="separator" class="divider-container  variant-full weight-light " aria-orientation="horizontal">
        <!--?lit$[hash]$--><div class="divider-line"></div>

        <slot class="divider-content"></slot>

        <!--?lit$[hash]$--><div class="divider-line"></div>
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-input — default 1`] = `
"<!---->
      <div class="input-wrapper" part="base">
        <!--?lit$[hash]$--><label part="label" for="flint-input-[id]"><!--?lit$[hash]$-->Name</label>

        <input part="input" id="flint-input-[id]" type="text" placeholder="" aria-required="false" aria-invalid="false" aria-describedby="" name="" autocomplete="" class="  ">

        <!--?lit$[hash]$-->
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-input — with placeholder 1`] = `
"<!---->
      <div class="input-wrapper" part="base">
        <!--?lit$[hash]$--><label part="label" for="flint-input-[id]"><!--?lit$[hash]$-->Email</label>

        <input part="input" id="flint-input-[id]" type="text" placeholder="you@example.com" aria-required="false" aria-invalid="false" aria-describedby="" name="" autocomplete="" class="  ">

        <!--?lit$[hash]$-->
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-kbd — default 1`] = `
"<!---->
            <kbd>
                <slot></slot>
            </kbd>
        <style></style>"
`;

exports[`DOM snapshots > flint-link — default 1`] = `
"<!---->
            <a class="link" href="#" tabindex="0">
                <slot></slot>
            </a>
        <style></style>"
`;

exports[`DOM snapshots > flint-pagination — default 1`] = `
"<!---->
            <nav part="base" aria-label="pagination navigation">
                <ol>
                    <!--?lit$[hash]$-->
                    <!--?lit$[hash]$-->
            <li>
                <button class="page-btn" part="button" aria-label="Previous page" disabled=""><slot name="prev-icon"><!--?lit$[hash]$--><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"></path></svg></slot></button>
            </li>
        

                    <!--?lit$[hash]$--><!---->
                        <li>
                            <button part="button" class=" page-btn active " aria-label="Page 1" aria-current="page"><!--?lit$[hash]$-->1</button>
                        </li>
                    <!----><!---->
                        <li>
                            <button part="button" class=" page-btn " aria-label="Page 2"><!--?lit$[hash]$-->2</button>
                        </li>
                    <!----><!---->
                        <li>
                            <button part="button" class=" page-btn " aria-label="Page 3"><!--?lit$[hash]$-->3</button>
                        </li>
                    <!----><!---->
                        <li>
                            <button part="button" class=" page-btn " aria-label="Page 4"><!--?lit$[hash]$-->4</button>
                        </li>
                    <!----><!---->
                        <li>
                            <button part="button" class=" page-btn " aria-label="Page 5"><!--?lit$[hash]$-->5</button>
                        </li>
                    <!----><!---->
                            <li>
                                <button class="page-btn ellipsis" part="button" tabindex="-1" aria-hidden="true">
                                    <slot name="ellipsis-icon"><!--?lit$[hash]$--><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg></slot>
                                </button>
                            </li><!----><!---->
                        <li>
                            <button part="button" class=" page-btn " aria-label="Page 10"><!--?lit$[hash]$-->10</button>
                        </li>
                    <!---->

                    <!--?lit$[hash]$-->
            <li>
                <button class="page-btn" part="button" aria-label="Next page"><slot name="next-icon"><!--?lit$[hash]$--><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path></svg></slot></button>
            </li>
        
                    <!--?lit$[hash]$-->
                </ol>
            </nav>
        <style></style>"
`;

exports[`DOM snapshots > flint-rating — default 1`] = `
"<!---->
            <input class="hidden-input" type="hidden" name="" value="0">
            <div class="rating-container" role="radiogroup" aria-label="Rating" aria-disabled="false" aria-readonly="false">
                <!--?lit$[hash]$--><!---->
                <span role="radio" class=" star-wrapper " aria-label="1 star" aria-checked="false" tabindex="0">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper " aria-label="2 stars" aria-checked="false" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper " aria-label="3 stars" aria-checked="false" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper " aria-label="4 stars" aria-checked="false" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper " aria-label="5 stars" aria-checked="false" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!---->
            </div>
        <style></style>"
`;

exports[`DOM snapshots > flint-rating — with value 1`] = `
"<!---->
            <input class="hidden-input" type="hidden" name="" value="3">
            <div class="rating-container" role="radiogroup" aria-label="Rating" aria-disabled="false" aria-readonly="false">
                <!--?lit$[hash]$--><!---->
                <span role="radio" class=" star-wrapper active " aria-label="1 star" aria-checked="true" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper active " aria-label="2 stars" aria-checked="true" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper active " aria-label="3 stars" aria-checked="true" tabindex="0">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper " aria-label="4 stars" aria-checked="false" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!----><!---->
                <span role="radio" class=" star-wrapper " aria-label="5 stars" aria-checked="false" tabindex="-1">
                    <!--?lit$[hash]$-->
            <svg viewBox="0 0 24 24" aria-hidden="true">
                <!--?lit$[hash]$-->
                    <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"></path>
                
            </svg>
        
                </span>
            <!---->
            </div>
        <style></style>"
`;

exports[`DOM snapshots > flint-skeleton — circular 1`] = `
"<!---->
            <span part="skeleton" aria-hidden="true" class="skeleton pulse circular" style="display:block;background-color:var(--flint-skeleton-bg, var(--flint-surface-[id], rgba(0, 0, 0, 0.11)));position:relative;overflow:hidden;width:;height:;margin-top:;margin-bottom:;"></span>
        <style></style>"
`;

exports[`DOM snapshots > flint-skeleton — default 1`] = `
"<!---->
            <span part="skeleton" aria-hidden="true" class="skeleton pulse text" style="display:block;background-color:var(--flint-skeleton-bg, var(--flint-surface-[id], rgba(0, 0, 0, 0.11)));position:relative;overflow:hidden;width:100%;height:0.8em;margin-top:0.3em;margin-bottom:0.3em;"></span>
        <style></style>"
`;

exports[`DOM snapshots > flint-switch — default 1`] = `
"<!---->
      <div class="wrapper" part="base">
        <div part="control" role="switch" class=" switch " aria-checked="false" aria-disabled="false" aria-required="false" tabindex="0">
          <div class="thumb" part="thumb">
            <div class="icon-wrapper">
              <!--?lit$[hash]$--><slot name="icon-off"></slot>
            </div>
          </div>
        </div>
        <!--?lit$[hash]$--><slot></slot>
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-tooltip — default 1`] = `
"<!---->
      <div class="tooltip-container" part="base">
        <span class="trigger-wrapper" aria-describedby="flint-tooltip-[id]">
          <slot></slot>
        </span>
        <div part="body" role="tooltip" id="flint-tooltip-[id]" aria-hidden="true" class=" tooltip-popup top ">
          <!--?lit$[hash]$-->Tip
          <!--?lit$[hash]$-->
        </div>
      </div>
    <style></style>"
`;

exports[`DOM snapshots > flint-typography — default 1`] = `"<!----><p class="typography body1"><slot></slot></p><style></style>"`;
